benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_Add_ModExpPow2_iter2_error.log
=== Verification Error - Iteration 2 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Add_ModExpPow2.rs
Time: 2025-09-15 20:40:03

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0069]: `return;` in a function whose return type is not `()`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_ModExpPow2_impl.rs:30:10
   |
24 | exec fn mod_mul_u64(a: u64, b: u64, m: u64) -> u64
   |                                                --- expected `u64` because of this return type
...
30 |         (return as nat) == (a as nat) * (b as nat) % (m as nat)
   |          ^^^^^^ return type is not `()`
   |
help: give the `return` a value of the expected type
   |
30 |         (return 42 as nat) == (a as nat) * (b as nat) % (m as nat)
   |                 ++

warning: unreachable call
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_ModExpPow2_impl.rs:30:10
   |
30 |         (return as nat) == (a as nat) * (b as nat) % (m as nat)
   |          ------^^^^^^^
   |          |
   |          unreachable call
   |          any code following this expression is unreachable
   |
   = note: `#[warn(unreachable_code)]` on by default

error[E0069]: `return;` in a function whose return type is not `()`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_ModExpPow2_impl.rs:41:10
   |
36 | exec fn pow_mod(base: u64, exp: u64, m: u64) -> u64
   |                                                 --- expected `u64` because of this return type
...
41 |         (return as nat) == Exp_int(base as nat, exp as nat) % (m as nat)
   |          ^^^^^^ return type is not `()`
   |
help: give the `return` a value of the expected type
   |
41 |         (return 42 as nat) == Exp_int(base as nat, exp as nat) % (m as nat)
   |                 ++

warning: unreachable call
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_ModExpPow2_impl.rs:41:10
   |
41 |         (return as nat) == Exp_int(base as nat, exp as nat) % (m as nat)
   |          ------^^^^^^^
   |          |
   |          unreachable call
   |          any code following this expression is unreachable

error: aborting due to 2 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0069`.

--------------------------------------------------------------------------------

Additional Output:
error[E0069]: `return;` in a function whose return type is not `()`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_ModExpPow2_impl.rs:30:10
   |
24 | exec fn mod_mul_u64(a: u64, b: u64, m: u64) -> u64
   |                                                --- expected `u64` because of this return type
...
30 |         (return as nat) == (a as nat) * (b as nat) % (m as nat)
   |          ^^^^^^ return type is not `()`
   |
help: give the `return` a value of the expected type
   |
30 |         (return 42 as nat) == (a as nat) * (b as nat) % (m as nat)
   |                 ++

warning: unreachable call
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_ModExpPow2_impl.rs:30:10
   |
30 |         (return as nat) == (a as nat) * (b as nat) % (m as nat)
   |          ------^^^^^^^
   |          |
   |          unreachable call
   |          any code following this expression is unreachable
   |
   = note: `#[warn(unreachable_code)]` on by default

error[E0069]: `return;` in a function whose return type is not `()`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_ModExpPow2_impl.rs:41:10
   |
36 | exec fn pow_mod(base: u64, exp: u64, m: u64) -> u64
   |                                                 --- expected `u64` because of this return type
...
41 |         (return as nat) == Exp_int(base as nat, exp as nat) % (m as nat)
   |          ^^^^^^ return type is not `()`
   |
help: give the `return` a value of the expected type
   |
41 |         (return 42 as nat) == Exp_int(base as nat, exp as nat) % (m as nat)
   |                 ++

warning: unreachable call
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_ModExpPow2_impl.rs:41:10
   |
41 |         (return as nat) == Exp_int(base as nat, exp as nat) % (m as nat)
   |          ------^^^^^^^
   |          |
   |          unreachable call
   |          any code following this expression is unreachable

error: aborting due to 2 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0069`.
